Resolve dataset summary table todo. #42

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -400,12 +400,10 @@ by outlier score). DORA provides results organization modules intended to help
 We constructed three datasets to evaluate the utility of DORA and the
 performance of each ranking algorithm for a variety of scientific domains
  (astrophysics, planetary science, and Earth science). We also included a 
- benchmark dataset that uses MNIST and Fashion-MNIST. Here we describe
- the details of each dataset.
-\todo{Maybe add
- a table with number of samples, number of reference known outliers (if 
- available), etc, if room? }
- \todo{Can we make any of these datasets publicly available with the paper?}
+ benchmark dataset that uses MNIST and Fashion-MNIST. Table \ref{tab:datasets}
+ summarizes the number of unlabeled samples used for training and labeled
+ samples used for evaluation for each dataset. We describe each in detail
+ below.
 
 \subsubsection{Astrophysical objects in Dark Energy Survey.}
 \todo{Umaa}
@@ -634,6 +632,7 @@ package, open-source for extension by the wider scientific community, etc.}
 Summarize conclusions and plans for future work
 [Note that these datasets could also be used by other researchers as OOD
  benchmark tasks?]
+ \todo{Can we make any of these datasets publicly available with the paper?}
 }
 
 \bibliography{dora_references}
