--- a/publications/iaai21/dora_references.bib
+++ b/publications/iaai21/dora_references.bib
@@ -1,3 +1,221 @@
+@article{zhao2019pyod,
+  author  = {Zhao, Yue and Nasrullah, Zain and Li, Zheng},
+  title   = {PyOD: A Python Toolbox for Scalable Outlier Detection},
+  journal = {Journal of Machine Learning Research},
+  year    = {2019},
+  volume  = {20},
+  number  = {96},
+  pages   = {1-7},
+  url     = {http://jmlr.org/papers/v20/19-011.html}
+}
+
+@article{prochaska2021deep,
+  title={Deep Learning of Sea Surface Temperature Patterns to Identify Ocean Extremes},
+  author={Prochaska, J Xavier and Cornillon, Peter C and Reiman, David M},
+  journal={Remote Sensing},
+  volume={13},
+  number={4},
+  pages={744},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{touati2020anomaly,
+  title={Anomaly feature learning for unsupervised change detection in heterogeneous images: A deep sparse residual model},
+  author={Touati, Redha and Mignotte, Max and Dahmane, Mohamed},
+  journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
+  volume={13},
+  pages={588--600},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{alvera2012outlier,
+  title={Outlier detection in satellite data using spatial coherence},
+  author={Alvera-Azc{\'a}rate, Aida and Sirjacobs, Damien and Barth, Alexander and Beckers, J-M},
+  journal={Remote Sensing of Environment},
+  volume={119},
+  pages={84--91},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{liu2017unsupervised,
+  title={Unsupervised detection of contextual anomaly in remotely sensed data},
+  author={Liu, Qi and Klucik, Rudy and Chen, Chao and Grant, Glenn and Gallaher, David and Lv, Qin and Shang, Li},
+  journal={Remote Sensing of Environment},
+  volume={202},
+  pages={75--87},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{zhou2016novel,
+  title={A novel cluster kernel RX algorithm for anomaly and change detection using hyperspectral images},
+  author={Zhou, Jin and Kwan, Chiman and Ayhan, Bulent and Eismann, Michael T},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={54},
+  number={11},
+  pages={6497--6504},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{chang2002anomaly,
+  title={Anomaly detection and classification for hyperspectral imagery},
+  author={Chang, Chein-I and Chiang, Shao-Shan},
+  journal={IEEE transactions on geoscience and remote sensing},
+  volume={40},
+  number={6},
+  pages={1314--1325},
+  year={2002},
+  publisher={IEEE}
+}
+
+@article{lochner2021astronomaly,
+  title={Astronomaly: Personalised active anomaly detection in astronomical data},
+  author={Lochner, Michelle and Bassett, Bruce A},
+  journal={Astronomy and Computing},
+  pages={100481},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{hayat2021self,
+  title={Self-supervised Representation Learning for Astronomical Images},
+  author={Hayat, Md Abul and Stein, George and Harrington, Peter and Luki{\'c}, Zarija and Mustafa, Mustafa},
+  journal={The Astrophysical Journal Letters},
+  volume={911},
+  number={2},
+  pages={L33},
+  year={2021},
+  publisher={IOP Publishing}
+}
+
+@article{storey2020anomaly,
+  title={Anomaly Detection in Astronomical Images with Generative Adversarial Networks},
+  author={Storey-Fisher, Kate and Huertas-Company, Marc and Ramachandra, Nesar and Lanusse, Francois and Leauthaud, Alexie and Luo, Yifei and Huang, Song},
+  journal={arXiv preprint arXiv:2012.08082},
+  year={2020}
+}
+
+@article{xiong2010anomaly,
+  title={Anomaly detection for astronomical data},
+  author={Xiong, Liang and Poczos, Barnabas and Connolly, Andrew and Schneider, Jeff},
+  year={2010},
+  publisher={Carnegie Mellon University}
+}
+
+@article{markou2003novelty2,
+  title={Novelty detection: a review—part 2:: neural network based approaches},
+  author={Markou, Markos and Singh, Sameer},
+  journal={Signal processing},
+  volume={83},
+  number={12},
+  pages={2499--2521},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{markou2003novelty,
+  title={Novelty detection: a review—part 1: statistical approaches},
+  author={Markou, Markos and Singh, Sameer},
+  journal={Signal processing},
+  volume={83},
+  number={12},
+  pages={2481--2497},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{pimentel2014review,
+  title={A review of novelty detection},
+  author={Pimentel, Marco AF and Clifton, David A and Clifton, Lei and Tarassenko, Lionel},
+  journal={Signal Processing},
+  volume={99},
+  pages={215--249},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{scholkopf1999support,
+  title={Support vector method for novelty detection},
+  author={Sch{\"o}lkopf, Bernhard and Williamson, Robert C and Smola, Alexander J and Shawe-Taylor, John and Platt, John C and others},
+  booktitle={NIPS},
+  volume={12},
+  pages={582--588},
+  year={1999},
+  organization={Citeseer}
+}
+
+@article{chandola2009anomaly,
+  title={Anomaly detection: A survey},
+  author={Chandola, Varun and Banerjee, Arindam and Kumar, Vipin},
+  journal={ACM computing surveys (CSUR)},
+  volume={41},
+  number={3},
+  pages={1--58},
+  year={2009},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{breunig2000lof,
+  title={LOF: identifying density-based local outliers},
+  author={Breunig, Markus M and Kriegel, Hans-Peter and Ng, Raymond T and Sander, J{\"o}rg},
+  booktitle={Proceedings of the 2000 ACM SIGMOD international conference on Management of data},
+  pages={93--104},
+  year={2000}
+}
+
+@inproceedings{akcay2018ganomaly,
+  title={Ganomaly: Semi-supervised anomaly detection via adversarial training},
+  author={Akcay, Samet and Atapour-Abarghouei, Amir and Breckon, Toby P},
+  booktitle={Asian conference on computer vision},
+  pages={622--637},
+  year={2018},
+  organization={Springer}
+}
+
+@article{park2018multimodal,
+  title={A multimodal anomaly detector for robot-assisted feeding using an lstm-based variational autoencoder},
+  author={Park, Daehyung and Hoshi, Yuuna and Kemp, Charles C},
+  journal={IEEE Robotics and Automation Letters},
+  volume={3},
+  number={3},
+  pages={1544--1551},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{jablonski2015principal,
+  title={Principal component reconstruction error for hyperspectral anomaly detection},
+  author={Jablonski, James A and Bihl, Trevor J and Bauer, Kenneth W},
+  journal={IEEE Geoscience and Remote Sensing Letters},
+  volume={12},
+  number={8},
+  pages={1725--1729},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{richter2017safe,
+  title={Safe visual navigation via deep learning and novelty detection},
+  author={Richter, Charles and Roy, Nicholas},
+  year={2017},
+  booktitle={Robotics: Science and Systems}
+}
+
+@article{kerner2020analysis,
+  title={Analysis of active neutron measurements from the mars science laboratory dynamic albedo of neutrons instrument: Intrinsic variability, outliers, and implications for future investigations},
+  author={Kerner, HR and Hardgrove, CJ and Czarnecki, S and Gabriel, TSJ and Mitrofanov, IG and Litvak, ML and Sanin, AB and Lisov, DI},
+  journal={Journal of Geophysical Research: Planets},
+  volume={125},
+  number={5},
+  pages={e2019JE006264},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
 @article{bohm2020probabilistic,
   title={Probabilistic auto-encoder},
   author={B{\"o}hm, Vanessa and Seljak, Uro{\v{s}}},
