--- a/publications/iaai21/dora_references.bib
+++ b/publications/iaai21/dora_references.bib
@@ -346,3 +346,63 @@
   year =      {2018--},
   url = "https://api.planet.com"
 }
+
+@ARTICLE{DESY1,
+       author = {{Zuntz}, J. and {Sheldon}, E. and {Samuroff}, S. and {Troxel}, M.~A. and
+         {Jarvis}, M. and {MacCrann}, N. and {Gruen}, D. and {Prat}, J. and
+         {S{\'a}nchez}, C. and {Choi}, A. and {Bridle}, S.~L. and
+         {Bernstein}, G.~M. and {Dodelson}, S. and {Drlica-Wagner}, A. and
+         {Fang}, Y. and {Gruendl}, R.~A. and {Hoyle}, B. and {Huff}, E.~M. and
+         {Jain}, B. and {Kirk}, D. and {Kacprzak}, T. and {Krawiec}, C. and
+         {Plazas}, A.~A. and {Rollins}, R.~P. and {Rykoff}, E.~S. and
+         {Sevilla-Noarbe}, I. and {Soergel}, B. and {Varga}, T.~N. and
+         {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and {Allam}, S. and
+         {Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and
+         {Bertin}, E. and {Buckley-Geer}, E. and {Burke}, D.~L. and
+         {Carnero Rosell}, A. and {Carrasco Kind}, M. and {Carretero}, J. and
+         {Castander}, F.~J. and {Crocce}, M. and {Cunha}, C.~E. and
+         {D'Andrea}, C.~B. and {da Costa}, L.~N. and {Davis}, C. and
+         {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and {Doel}, P. and
+         {Eifler}, T.~F. and {Estrada}, J. and {Evrard}, A.~E. and
+         {Fausti Neto}, A. and {Fernandez}, E. and {Flaugher}, B. and
+         {Fosalba}, P. and {Frieman}, J. and {Garc{\'\i}a-Bellido}, J. and
+         {Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+         {Gschwend}, J. and {Gutierrez}, G. and {Hartley}, W.~G. and
+         {Honscheid}, K. and {James}, D.~J. and {Jeltema}, T. and
+         {Johnson}, M.~W.~G. and {Johnson}, M.~D. and {Kuehn}, K. and
+         {Kuhlmann}, S. and {Kuropatkin}, N. and {Lahav}, O. and {Li}, T.~S. and
+         {Lima}, M. and {Maia}, M.~A.~G. and {March}, M. and {Martini}, P. and
+         {Melchior}, P. and {Menanteau}, F. and {Miller}, C.~J. and
+         {Miquel}, R. and {Mohr}, J.~J. and {Neilsen}, E. and {Nichol}, R.~C. and
+         {Ogando}, R.~L.~C. and {Roe}, N. and {Romer}, A.~K. and {Roodman}, A. and
+         {Sanchez}, E. and {Scarpine}, V. and {Schindler}, R. and
+         {Schubnell}, M. and {Smith}, M. and {Smith}, R.~C. and
+         {Soares-Santos}, M. and {Sobreira}, F. and {Suchyta}, E. and
+         {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and
+         {Tucker}, D.~L. and {Vikram}, V. and {Walker}, A.~R. and
+         {Wechsler}, R.~H. and {Zhang}, Y. and {DES Collaboration}},
+        title = "{Dark Energy Survey Year 1 results: weak lensing shape catalogues}",
+      journal = {MNRAS},
+     keywords = {gravitational lensing: weak, methods: data analysis, techniques: image processing, catalogues, surveys, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = nov,
+       volume = {481},
+       number = {1},
+        pages = {1149-1182},
+          doi = {10.1093/mnras/sty2219},
+archivePrefix = {arXiv},
+       eprint = {1708.01533},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.481.1149Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@Article{lupton99,
+  author = 	 {Lupton, R. H. and Gunn, J. E. and Szalay, A. S.},
+  title = 	 {A modified magnitude system that produces well-behaved magnitudes, colors, and errors even for low signal-to-noise ratio measurements},
+  journal = 	 {Astronomical Journal},
+  year = 	 {1999},
+  volume = 	 {118},
+  number = 	 {3},
+  pages = 	 {1406--1410},
+}
