removed my TODO flag; removed italics around z-band to just around z-

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -458,7 +458,6 @@ performance of each ranking algorithm for a variety of scientific domains
  below.
 
 \subsubsection{Astrophysics: objects in Dark Energy Survey.}
-\todo{Umaa}
 
 Astronomical data sets are large and growing. Large modern optical
 imaging surveys are producing catalogs for of order $10^8$ stars
@@ -487,9 +486,9 @@ observed by the Dark Energy Survey (DES) sampled from the initial June 2018 rele
 25,339 objects from this 100K set that did not appear in the later Dec 2019
 release were likely eliminated during the manual vetting process and were labeled as outliers.
 Note, that the remaining 74,661 objects may also contain outliers, but we assume them to be
-inliers in this experiment.
+inliers in this experiment.  
 
-We used publicly-available photometry from the $g-$, $r-$, $i-$ and $z-band$ DES exposures.  We
+We used publicly-available photometry from the $g-$, $r-$, $i-$ and $z-$band DES exposures.  We
 transformed the photometry into luptitudes\footnote{A
   ``Luptitude''~\cite{lupton99} is an arcsinh-scaled flux, with
   properties quantitatively equal to
