added des precision numbers to tab:faw_results

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -671,18 +671,18 @@ lowest performance in both metrics.
     \hline
     Algorithm & Astro. & Earth & Planetary & F-MNIST \\
     \hline
-    PCA               & & 0.41 & 0.44 & \textbf{0.84} \\
-    DEMUD             & & 0.41 & 0.44 & \textbf{0.84} \\
+    PCA               & \textbf{0.42} & 0.41 & 0.44 & \textbf{0.84} \\
+    DEMUD             & ---- & 0.41 & 0.44 & \textbf{0.84} \\
     \hline
-    RX                & & 0.43 & ---- & 0.82 \\
-    LRX               & & ---- & 0.33 & 0.56 \\
+    RX                & 0.40 & 0.43 & ---- & 0.82 \\
+    LRX               & ----& ---- & 0.33 & 0.56 \\
     \hline
-    Iso. Forest  & & 0.46 & \textbf{0.56} & 0.74 \\
+    Iso. Forest  & 0.34 & 0.46 & \textbf{0.56} & 0.74 \\
     \hline
-    PAE               & & 0.41 & 0.44 & 0.83 \\
-    Neg. Sampling & & \textbf{0.49} & 0.33 & 0.43 \\
+    PAE               & 0.35 & 0.41 & 0.44 & 0.83 \\
+    Neg. Sampling & 0.32 & \textbf{0.49} & 0.33 & 0.43 \\
     \hline
-    Random            & & 0.32 & 0.14 & 0.49 \\
+    Random            & 0.26 & 0.32 & 0.14 & 0.49 \\
     \hline
   \end{tabular}
 \end{table}
