added DES combined plot

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -687,6 +687,17 @@ lowest performance in both metrics.
   \end{tabular}
 \end{table}
 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{figures/des_combined_plot.pdf}
+    \caption{Number of true outliers ranked in top $N$ selections for 
+    the astrophysics (DES) dataset.}
+    \label{fig:des_results}
+\end{figure}
+
+
+
 \begin{figure}
     \centering
     \includegraphics[width=\linewidth]{figures/planetary_combined_plot.pdf}
@@ -710,6 +721,7 @@ lowest performance in both metrics.
     F-MNIST dataset.}
     \label{fig:fmnist_results}
 \end{figure}
+
 
 \section{Discussion}
 
