for DES data tables, changed num inliers to ----

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -591,7 +591,7 @@ higher outlier scores to samples from MNIST than F-MNIST.
      & Unlabeled &  Outliers &  Inliers \\
     
     \hline
-    Astrophysics & 100,000   &  25,339 &  74,661 \\
+    Astrophysics & 100,000   &  25,339 &  ---- \\
     Earth & 6,757 & 37 & 76  \\
     Planetary & 992 &  9 & 49 \\
     F-MNIST & 60,000 & 1,000 & 1,000  \\
