--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -20,7 +20,7 @@
 % For /Author, add all authors within the parentheses, separated by commas. No accents or commands.
 % For /Title, add Title in Mixed Case. No accents or commands. Retain the parentheses.
 \pdfinfo{
-/Title (AAAI Press Formatting Instructions for Authors Using LaTeX -- A Guide)
+/Title (Domain-agnostic Outlier Ranking Algorithms (DORA)---A Configurable Pipeline for Facilitating Outlier Detection in Scientific Datasets)
 /Author (AAAI Press Staff, Pater Patel Schneider, Sunil Issar, J. Scott Penberthy, George Ferguson, Hans Guesgen, Francisco Cruz, Marc Pujol-Gonzalez)
 /TemplateVersion (2021.2)
 } %Leave this
@@ -91,7 +91,7 @@
 % articles, conjunctions, and prepositions are lower case unless they
 % directly follow a colon or long dash
 \iffalse
-\title{AAAI Press Formatting Instructions \\for Authors Using \LaTeX{} --- A Guide }
+\title{Domain-agnostic Outlier Ranking Algorithms (DORA)---A Configurable Pipeline for Facilitating Outlier Detection in Scientific Datasets}
 \author{
     %Authors
     % All authors must be in the same font size and format.
@@ -146,15 +146,26 @@
 \title{Domain-agnostic Outlier Ranking Algorithms (DORA)---A Configurable Pipeline for Facilitating Outlier Detection in Scientific Datasets}
 \author {
     % Authors
-    First Author Name,\textsuperscript{\rm 1}
-    Second Author Name, \textsuperscript{\rm 2}
-    Third Author Name \textsuperscript{\rm 1} \\
+    Hannah Kerner,\textsuperscript{\rm 1}
+    Umaa Rebbapragada, \textsuperscript{\rm 2}
+    Kiri Wagstaff, \textsuperscript{\rm 2} 
+    Steven Lu, \textsuperscript{\rm 2} 
+    Bryce Dubayah, \textsuperscript{\rm 1} \\
+    Eric Huff, \textsuperscript{\rm 2} 
+    Jake Lee, \textsuperscript{\rm 2} 
+    Vinay Raman, \textsuperscript{\rm 3}
+    Sakshum Kulshrestha \textsuperscript{\rm 1}  \\
 }
 \affiliations {
     % Affiliations
-    \textsuperscript{\rm 1} Affiliation 1 \\
-    \textsuperscript{\rm 2} Affiliation 2 \\
-    firstAuthor@affiliation1.com, secondAuthor@affilation2.com, thirdAuthor@affiliation1.com
+    \textsuperscript{\rm 1} University of Maryland, College Park \\
+    \textsuperscript{\rm 2} Jet Propulsion Laboratory, 
+    									   California Institute of Technology \\
+    \textsuperscript{\rm 3} Montgomery Blair High School \\
+    \{hkerner\}@umd.edu, \{umaa.d.rebbapragada,
+    										kiri.l.wagstaff,
+    										you.lu,
+    										eric.m.huff\}@jpl.nasa.gov
 }
 
 \begin{document}
