Add discussion of overall algorithm performance. #42

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -667,7 +667,7 @@ MDR (Figure \ref{fig:faw_results}). We did not evaluate LRX for this time
 series dataset because LRX can only be applied to gridded image or raster 
 data types.
 
-For the astrophysics dataset (Figure~\ref{fig:des_results}, DEMUD was omitted due to computational time 
+For the astrophysics dataset (Figure~\ref{fig:des_results}), DEMUD was omitted due to computational time 
 and LRX was omitted as it applies only to image data.  Of the remaining methods, 
 PCA achieved the highest precision, following by RX.  Negative sampling 
 performs well initially before its performance drops off.  The PAE finds the most outliers 
@@ -741,9 +741,19 @@ lowest performance in both metrics.
 
 \section{Discussion}
 
-\paragraph{Algorithm performance.} \todo{Discuss overall results from
- experiments and that we left hyperparameter tuning and extensive
- evaluation for future work.}
+\paragraph{Algorithm performance.} There was no one algorithm that 
+consistently had the best performance across all four datasets. PCA had
+the best performance overall for the astrophysics and F-MNIST datasets, 
+while negative sampling and isolation forest had the best performance for
+the Earth science and planetary datasets respectively. [This shows why
+it is best for us to include a variety of algorithms because the best 
+algorithm will vary depending on the dataset.] The purpose of this study
+was to demonstrate how DORA could be used to facilitate comprehensive
+outlier detection experiments and compare results across datasets from 
+different domains. Thus we chose hyperparameters based on common 
+practice and sense and leave hyperparameter tuning, which would likely 
+improve results for each dataset but would require
+creation of additional validation sets, for future work.
  
 \paragraph{Evaluation in outlier detection.} \todo{Discuss why evaluation
 in outlier detection applications is hard since we often don't have complete
